<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.SettingsActivity">

    <EditText
        android:id="@+id/edChannelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_tg_channel_name" />

    <EditText
        android:id="@+id/edBotToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bot_token" />

    <Button
        android:id="@+id/btnSaveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>