<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:id="@+id/txtHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:gravity="center_horizontal"
        android:text="@string/hello"
        android:textSize="@dimen/dp24" />

    <Button
        android:id="@+id/btnEnable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtHello"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/go" />

    <Button
        android:id="@+id/btnPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEnable"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_margin"
        android:text="Выхожу. Пауза 30 сек" />

    <Button
        android:id="@+id/btnSettings"
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>